# space_tycoon_model

./: .gitignore  README.md  SpaceTycoonModel.cpp  main.cpp  meson.build  uncrustify.0.68.cfg  vscode.code-workspace
include/: Building.h  DelayedVector.h  EntitiesDeclarations.h  Entity.h  Farm.h  Food.h  Item.h  Land.h  Object.h  ObjectiveUtilitiesConfig.h  ObjectiveUtility.h  Owner.h  Person.h  ProductionsConfig.h  Property.h  Settlement.h  Space.h  SpaceTycoonModel.h  UpdateContext.h  UpdateContextTestFixture.h
src/: Building.cpp  Death.h  Entity.h  EntityArray.h  Farm.cpp  Food.cpp  Food.h  IEntity.h  IEntityContainer.h  IItem.h  ISpace.h  Land.cpp  Object.cpp  ObjectiveUtilitiesConfig.cpp  ObjectiveUtility.cpp  Owner.cpp  Person.cpp  Person.h  ProductionsConfig.cpp  Property.cpp  Settlement.cpp  Settlement.h  Space.cpp  Space.h  SpaceTycoonModel.cpp  Update.h  UpdateContext.h  meson.build
subprojects/: easyloggingpp.wrap
subprojects/packagefiles/easyloggingpp/: meson.build
tests/: BestProduction.Test.cpp  Birth.Test.cpp  Death.Test.cpp  EntityArray.Test.cpp  EntityVectorUpdate.Test.cpp  Hunger.Test.cpp  Main.Test.cpp  ObjectiveUtility.Test.cpp  Ownership.Test.cpp  Pickup.Test.cpp  Scavenge.Test.cpp  meson.build
